# iota

./: .codespell-ignore  .env.example  .env.test  .gitignore  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.redis-test  Dockerfile.test  LICENSE  README.md  alembic.ini  conftest.py  cookies.txt  dashboard_users.json  dev-requirements.txt  docker-compose.prod.yml  docker-compose.redis.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  first_roadmap.md  improvement.md  mypy.ini  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  roadmap_allan.md  setup.cfg  sprint_kickoff.md  sprint_plan.md  validation_metrics.json  {}
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-test.yml  ci.yml  config_validation.yml  doc-checks.yml  docs.yml  markdownlint.json  mlc_config.json  monitoring.yml  performance-tests.yml  rate-limiter-tests.yml  security.yml  test.yml  validate-config.yml
alembic/: env.py
alembic/versions/: 001_create_users_table.py
app/: main.py
app/api/: deps.py
app/core/: config.py  db_verify.py  error_handlers.py  logging.py  security.py
app/db/: base.py  init.py  session.py
app/models/: audit_log.py  base.py  enums.py  refresh_token.py  setting.py  user.py
config/: README.md  validation_rules.json  validation_rules.yaml
dashboards/: rate_limiter.json  rate_limiter_dashboard.json
docker/: README.md
docs/: LOGGING.md  api.md  api_testing.md  architecture.md  authentication.md  authorization.md  ci_cd_and_secrets.md  config_parser.md  configuration.md  contributing.md  development.md  documentation_update_2025_02_22.md  error_logger.md  final_documentation_review_2025_02_22.md  incident_response.md  integration_testing.md  migration-guide.md  monitoring.md  monitoring_changes_2025_02_22.md  observability.md  perf_monitor.md  performance_testing.md  pre-commit.md  quick_reference.md  rate_limiting.md  redis_sentinel.md  style-guide.md  testing.md  type_checking.md  version_management.md  visual_testing_guide.md
monitoring/: .gitignore  README.md  docker-compose.monitoring.yml
redis/: README.md
scripts/: README.md  analyze_config_errors.py  bump_version.py  check_config_errors.sh  check_validation_metrics.py  cleanup_rate_limits.py  create_test_db.sh  doc_checker.py  fix_docs.py  generate_secret_key.py  init_db.sh  install_git_hooks.sh  manage_server.sh  metrics_exporter.py  run_validation_test.py  setup_test_db.sh  update_changelog.py  validate_code_blocks.py  validate_config.py  validate_docs.py  verify_docs.py  verify_docs_ci.py  verify_spelling.py  verify_templates.py
server/: .env  .env.example  .env.test  alembic.ini  main.py  pyproject.toml.bak  pytest.ini  requirements-test.txt  requirements.txt  test.db
tests/: .env.test  conftest.py  requirements-test.txt  sentinel_health.py  test_chaos_scenarios.py  test_config_migration.py  test_config_monitoring.py  test_dashboard_load.py  test_dashboard_visual.py  test_grafana_dashboard.py  test_metrics_exporter.py  test_metrics_integration.py  test_metrics_storage.py  test_monitoring.py  test_scripts.py  test_template_validation.py  test_validation_runner.py  test_version_compatibility.py  test_yaml_parsing.py  validation_metrics.json
(+267 files in other folders)
